samples/_failures_safe/1761212272_598383_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f7c172f.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_0f7c172f.c:156:18: error: ‘TO’ undeclared (first use in this function)
  156 |             case TO
      |                  ^~
./samples/SAFE/__tmp_0f7c172f.c:156:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0f7c172f.c:156:13: error: expected ‘:’ or ‘...’ at end of input
  156 |             case TO
      |             ^~~~
./samples/SAFE/__tmp_0f7c172f.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f7c172f.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f7c172f.c:156:13: error: expected declaration or statement at end of input
